# astro-react-onnx-template

./: .gitignore  README.md  astro.config.mjs  justfile  package-lock.json  package.json  repomix-output.txt
.github/workflows/: deploy.yml
public/models/: double_vector.onnx
python/: gen_double_model.py  pyproject.toml  test_model.py
src/components/: ONNXDoubleModel.jsx  ONNXDoubleModel.tsx
src/layouts/: Layout.astro
src/lib/: useONNXModel.ts  worker_onnx_double.js
src/lib/hooks/: useONNXModel.ts
src/lib/workers/: onnx_double.worker.ts  types.ts  worker_onnx_double.ts
src/pages/: index.astro
