[project]
name = "onnx-test"
version = "1.0.0"
description = "Generate a test ONNX model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
    "torch>=2.6.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'"},
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
